--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Josué Adolfo Hayde Ávila</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./img/JH2.png" type="image/png" sizes="16x16">
 </head>
 <body>
-    
+   <header> 
+        <img src="./img/JH2.png" width="70">       
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+                
+            </ul>
+        </nav>
+    </header>
+    <!-- La estructura básica y la vinculación con CSS estan listas. A codear! 💪  -->
+    <!-- En este archivo escriban su HTML --> 
+    <main>
+        <section id="inicio">
+            <div class="ini1">
+                <img src="./img/mi-foto2.png" alt="Josué Hayde" class="imgR">
+           <article>
+            <h1>Hola! Soy Josué</h1>
+            <p>Un desarrollador de herramientas para la optimalización de procesos administrativos y logísticos. Cuento con excelentes aptitudes tecnológicas para la gestión y control de procesos. He desarrollado, implementado y automatizado procesos para pequeñas y medianas empresas en sus áreas de logística, almacenamiento y administración; permitiendo lograr las metas establecidas y mejorando los KPI respectivos.</p>
+            <br>
+            <button type="submit">
+                <a href="./cv/cv-josue.pdf" download="CV Josue Hayde">Descargar mi CV</a>
+            </button>
+           </article>
+            </div>
+        </section>
+        <section id="contacto">
+            <article class="contacto2">
+            <h2>Hablemos!</h2>
+            <p>Te agradezco mucho tu atención y espero formar parte de tu equipo.<br>Encontraras mi correo electrónico y mas detalle acerca de mi perfil profesional en los siguientes iconos.</p>
+            </article>            
+            <ul>
+                <li><a href="mailto:jhosua2388@gmail.com"><img src="./img/mail.png" alt="email"></a></li>
+                <li><a href="https://github.com/jhosua2388" target="_blank"><img src="./img/github.png" alt="github"></a></li>
+                <li><a href="https://cl.linkedin.com/" target="_blank"><img src="./img/linkedin.png" alt="linkedin"></a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <small>Código Latam</small>
+    </footer>
 </body>
 </html>
